align title, fixes and imrovements

--- a/src/app/shared/components/amb-nav/amb-nav.component.scss
+++ b/src/app/shared/components/amb-nav/amb-nav.component.scss
@@ -13,4 +13,9 @@
 
 .app-title {
   text-transform: uppercase;
+  padding-left: 26px;
+}
+
+.header-toolbar {
+  justify-content: space-between;
 }
